--- a/MainApp/LogWindow.xaml
+++ b/MainApp/LogWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MainApp.LogWindow"
+﻿<local:BaseWindow x:Class="MainApp.LogWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,8 +6,8 @@
         xmlns:views="clr-namespace:MainApp.Views"
         xmlns:local="clr-namespace:MainApp"
         mc:Ignorable="d"       
-        Title="MainWindow" Background="White"
-        WindowStartupLocation="CenterScreen"
+        Title="LogWindow" 
+        WindowStartupLocation="CenterScreen" Background="White"
         WindowStyle="None" AllowsTransparency="True" ResizeMode="NoResize"  
         Height="524" Width="340" 
         MinHeight="524" MinWidth="340" 
@@ -28,4 +28,4 @@
 
         </Grid>
     </Grid>
-</Window>
+</local:BaseWindow>
