add-添加BaseWinddw，添加历史页面并添加跟随特效

--- a/MainApp/Main.xaml
+++ b/MainApp/Main.xaml
@@ -31,5 +31,7 @@ GOOD
         </TextBlock>
 
 
+        <CheckBox Content="同步" Style="{StaticResource myCheckStyle}" />
+        
     </Grid>
 </UserControl>
