--- a/MainApp/Styles/LogView.xaml
+++ b/MainApp/Styles/LogView.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!--清空历史记录按钮的样式-->
     <Style x:Key="CloseHistoryStyle" TargetType="{x:Type Button}">
-        <Setter Property="Foreground" Value="Blue"/>
+        <Setter Property="Foreground" Value="#FF156FEA"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Cursor" Value="Hand"/>
