--- a/MainApp/MainWindow.xaml
+++ b/MainApp/MainWindow.xaml
@@ -31,7 +31,9 @@
             </StackPanel>
         </Grid>
         <Grid Grid.Row="1">
-            <views:UcMain/>
+
+            <views:UcMenu/>
+         
             <!--<views:UcScan/>-->
         </Grid>
     </Grid>
