--- a/MainApp/App.xaml
+++ b/MainApp/App.xaml
@@ -2,12 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MainApp"
-             StartupUri="LogWindow.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MainApp;component/Styles/CheckBox.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/MainApp;component/Styles/TreeView.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/MainApp;component/Styles/MenuStyle.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/MainApp;component/Styles/ProgressBar.xaml"/>
 
                 <ResourceDictionary Source="pack://application:,,,/MainApp;component/Styles/Title.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/MainApp;component/Styles/MainView.xaml"/>
