--- a/MainApp/Views/UcScan.xaml
+++ b/MainApp/Views/UcScan.xaml
@@ -11,6 +11,7 @@
         <DockPanel Margin="0,40,0,0" Height="300" VerticalAlignment="Top">
             <radar:RadarMeter DockPanel.Dock="Left" Width="300" 
                           Name="meter" ToolTip="正在同步"
+                          MouseDown="meter_MouseDown" 
                           DialFill="White" DialStroke="#FF009CFE" DialStrokeThickness="1" ScanOpacity="1">
                 <radar:RadarMeter.ScanFill>
                     <LinearGradientBrush StartPoint="1,0" EndPoint="0,1">
