--- a/MainApp/Styles/MenuStyle.xaml
+++ b/MainApp/Styles/MenuStyle.xaml
@@ -5,7 +5,7 @@
         <Setter Property="Stroke" Value="#FFECECEC"/>
         <Setter Property="Height" Value="0.5"/>
     </Style>
-
+    <!--菜单可用明细格式-->
     <Style x:Key="StackPanelStyle" TargetType="{x:Type StackPanel}">
         <Setter Property="Orientation" Value="Horizontal"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
@@ -17,61 +17,11 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-
+    <!--菜单禁用明细格式-->
     <Style x:Key="StackPanelStyle2" TargetType="{x:Type StackPanel}">
         <Setter Property="Orientation" Value="Horizontal"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Height" Value="30"/>
-    </Style>
-    
-    <Style TargetType="{x:Type Menu}">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type Menu}">
-                    <Border CornerRadius="0">
-                        <ItemsPresenter/>
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <Style TargetType="{x:Type MenuItem}">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type MenuItem}">
-                    <Border Margin="0,2" x:Name="bd" Background="#CCCCCC" MinWidth="100" CornerRadius="0">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="30"/>
-                                <ColumnDefinition/>
-                            </Grid.ColumnDefinitions>
-                            <Rectangle Fill="#99CC66" Height="20" Width="20"/>
-                            <ContentPresenter Margin="0,10" ContentSource="Header" Grid.Column="1" HorizontalAlignment="Left"/>
-                            <Popup x:Name="pop" Margin="10" IsOpen="{TemplateBinding IsSubmenuOpen}" AllowsTransparency="True" Placement="Right">
-                                <Border Margin="5" CornerRadius="5" Background="#FFCCCC">
-                                    <StackPanel IsItemsHost="True">
-                                    </StackPanel>
-                                </Border>
-                            </Popup>
-                        </Grid>
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="true">
-                            <Setter TargetName="bd" Property="Background" Value="#0099CC"/>
-                            <Setter TargetName="pop" Property="IsOpen" Value="true"/>
-                        </Trigger>
-                        <Trigger Property="IsMouseOver" Value="False">
-                            <Setter TargetName="pop" Property="IsOpen" Value="false"/>
-                        </Trigger>
-                        <Trigger Property="IsPressed" Value="True">
-                            <Setter TargetName="bd" Property="Background" Value="#FF6666"/>
-                            <Setter TargetName="pop" Property="IsOpen" Value="false"/>
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
     </Style>
 
 </ResourceDictionary>
